# SiffTrac

./: .gitignore  README.md  pyproject.toml
conda-recipe/: conda_build_config.yaml  meta.yaml
sifftrac/: __init__.py  _version.py
sifftrac/abf/: abf.py
sifftrac/ros/: README.md  __init__.py  experiment.py
sifftrac/ros/interpreters/: __init__.py  fictrac.py  lightsugar.py  metadata.py  projector.py  ros_interpreter.py  warner_temperature.py
sifftrac/ros/interpreters/experiment_logics/: events.py  vr_position.py
sifftrac/ros/interpreters/mcc/: mcc1208fs.py  picopump.py
sifftrac/ros/interpreters/mixins/: config_file_params.py  git_validation.py  timepoints_mixins.py
sifftrac/ros/interpreters/unity/: __init__.py  gratings.py  unity.py
sifftrac/utils/: __init__.py  types.py
tests/: trace_corrections.py
