[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "sifftrac/_version.py"


[tool.setuptools]
packages = ["sifftrac"]

[project]
name = "sifftrac"
version = "0.0.1"
#dynamic = ["version"]
readme = "README.md"
description = "A package for reading and analyzing FicTrac and other ROS2 output data"
license = {text="GPL-3.0-or-later"}
authors = [
    {email = "thornquist@rockefeller.edu"},
    {name = "Stephen Thornquist"},
]

dependencies = [
    "numpy >= 1.15",
    "scipy",
    "h5py",
    "pandas",
    "ruamel.yaml",
]